# Alpaco_FullStack_Case_StudyV2

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  auth.py  drops.py
backend/app/services/: __init__.py  seed.py  waitlist.py
backend/tests/: conftest.py  test_seed.py  test_waitlist_flow.py
docs/screenshots/: README.md
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/drops/: page.tsx
frontend/src/components/: AdminPanel.tsx  AuthPanel.tsx  DropList.tsx
frontend/src/components/__tests__/: AuthPanel.test.tsx  DropList.test.tsx
frontend/src/lib/: api.ts
frontend/src/store/: authStore.ts
