[project]
name = "dropspot-backend"
version = "0.1.0"
description = "DropSpot waitlist and claim backend"
authors = [
    { name = "Gokalp Koreken", email = "hr@alpacotech.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.112",
    "uvicorn[standard]~=0.29",
    "sqlalchemy~=2.0",
    "alembic~=1.13",
    "psycopg2-binary~=2.9",
    "python-jose[cryptography]~=3.3",
    "passlib[bcrypt]~=1.7",
    "bcrypt<4.1",
    "pydantic[email]~=2.9",
    "python-dotenv~=1.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "httpx~=0.27",
    "pytest-cov~=5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
